# temp

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  serialmanager.cpp  serialmanager.h
.github/workflows/: qt-build.yml  qt6-cmake-build.yml
